# Immortality

./: README  install.xml  macbuild.sh
dependencies/: beta-template.dmg  release-template.dmg
doc/: contributions.txt
etc/: message.xml
indra/: CMakeLists.txt  Prepare Build KDU OFF.bat  Prepare Build KDU ON.bat  Version  develop.py
indra/cmake/: 00-Common.cmake  Boost.cmake  CMakeLists.txt  CopyWinLibs.cmake  FMOD.cmake  FindLibgcrypt.cmake  FindLibgpg_error.cmake  LLCommon.cmake  OpenGL.cmake  UI.cmake  UnixInstall.cmake  Variables.cmake  VersionControl.cmake  libgcrypt.cmake  libgpg-error.cmake  libotr.cmake
indra/libgcrypt/: CMakeLists.txt
indra/libotr/: CMakeLists.txt
indra/libotr/libotr-3.2.0/src/: message.c  proto.c
indra/llaudio/: CMakeLists.txt  llaudiodecodemgr.cpp  llaudioengine.cpp  llaudioengine.h
indra/llcharacter/: llkeyframemotion.cpp  llvisualparam.h
indra/llcommon/: CMakeLists.txt  indra_constants.h  linden_common.h  llbase64.cpp  llbase64.h  llerror.cpp  llfasttimer.cpp  lllslconstants.h  llpreprocessor.h  llqueuedthread.cpp  llsecondlifeurls.cpp  llstring.cpp  llstring.h  llsys.cpp  llsys.h  llversionviewer.h.in  stdtypes.h
indra/llcrashlogger/: llcrashlogger.cpp
indra/llimage/: CMakeLists.txt  llimage.h  llimagej2c.cpp  llimagemetadatareader.cpp  llimageworker.cpp  llpngwrapper.cpp
indra/llimagej2coj/: CMakeLists.txt  llimagej2coj.cpp  llimagej2coj.h  llimagej2coj2.cpp  llimagej2cquartz.h  llimagej2cquartz.mm
indra/llmath/: llmath.h  llvolume.cpp  llvolume.h
indra/llrender/: llfont.cpp  (+7 more)
logs/: README
scripts/: install.py
(+533 files in other folders)
